nova_tests/negative_capability/folder_file_conflict_setup/admin/groups.nv
// Plan 42.08 Ф.1 + Ф.2: второй peer чтобы папка считалась folder-module
// (is_folder_module_dir requires ≥2 peers с одинаковым decl).

module folder_file_conflict_setup.admin

export fn group_count() -> int =>
    7
